// ==============================================================
// Copyright (c) 2026 Team ISET
// Licensed under the MIT.
// https://github.com/RAT-ISET/protocol-lab
// ==============================================================
// Path /include/pl/core/Workspace.hpp
// Header file of the software workspace.

#pragma once

class Workspace
{
public:
};
