@startuml mainframe

package front {
    class ui {
        + runUi()
    }
}

package back {
    package inter {
        interface IModule {
            + void init()
        }

        interface IGetSignal {
            + getValue(size_t time) -> SignalData&
        }
        IModule *-- IGetSignal

        interface ICalculationBase {
            + void run()
        }

        interface ICalculation<class TaskType> {
            + addTask(TaskType task)
            + clear()
        }
        ICalculation ..|> ICalculationBase
        IModule *-- ICalculation

        interface ICalculationTask<class In> {
            + addEntry(In& in)
            + run()
        }
        ICalculation *-- ICalculationTask
    }

    package base {
        class BaseWave {
            - double frequency_
            - double amplitude_
            - BaseWaveStatus status_
            + override init()
            + getValue() -> SignalData
        }
        BaseWave <|.. IModule
        BaseWave <|.. IGetSignal

        class BaseWaveStatus {
            - vector<SignalData> values_
            - SignalData omega_
            + static update(vector<Self*> source, SignalDataBuffer& data)
            + iteration()
            + calibrate()
        }
        BaseWave *-- BaseWaveStatus

        class BaseWaveCalculation<BaseWaveCalculationTask> {
            - vector<BaseWaveCalculationTask> tasks_
            + override run()
            + override addTask(BaseWaveCalculationTask task)
            + override clear()
        }
        BaseWave *-- BaseWaveCalculation
        BaseWaveCalculation ..|> ICalculation

        class BaseWaveCalculationTask<BaseWaveStatus> {
            - vector<BaseWaveStatus*> source_
            - array<SignalDataBuffer, 2> data_
            - size_t step_count_
            + override addEntry(BaseWaveStatus& in)
            + override run()
            + step()
        }
        BaseWaveCalculationTask ..|> ICalculationTask 
        BaseWaveCalculation *-- BaseWaveCalculationTask
        BaseWaveCalculationTask -- BaseWaveStatus

        class DigitalNoise {
            - mt19937 rng_
            - uint32_t seed_
            + getSeed() -> uint32_t
            + step() -> uint32_t
        }

        class AnalogNoise {
            - mt19937 rng_
            - uint32_t seed_
            - SignalData status_
            - normal_distribution<double> dist_
            + getSeed() -> uint32_t
            + step() -> SignalData
        }
    }

    package core {
        class Calculator {
            - vector<ICalculationBase*> calculations_
            + registerCalculater(ICalculationBase* item)
            + run()
        }
        Calculator -- ICalculation

        class Tasker {
            - size_t tick_
            + createTask() -> ICalculationTask
        }
        Tasker *-- ICalculationTask

        class Workspace {
            - vector<IGetSignal> signals_
        }

        class Environment {
            - vector<Workspace> workspace_
            - usize_t tick_
            - Calculator calculator_
            - vector<Tasker> tasker_
            - vector<IModule> modules_
            + CreateTasker(usize_t tick) -> Tasker
        }
        Environment *-- Tasker
        Environment *-- IGetSignal
        Environment *-- Workspace
        Environment *-- Calculator

        class Session {
            - vector<Environment> envs_
        }
        Session *-- Environment
        Session *-- ui
    }

    package data {
        class SignalData {
            - double I
            - double Q
        }

        class SignalDataBuffer {
            - vector<double> Is
            - vector<double> Qs
            + replace(size_t index, SignalData& data)
            + pushBack(SignalData& data)
        }
        SignalDataBuffer -- SignalData
    }

    package conf {
        class Config {}
    }

    package io {
        class LogFile
        class GraphyFile
    }
    package log {
        class Logger
    }
    package out {
        class GraphyGenerate
        class Graphy
    }
    package arg {}
}

@enduml